[REGRESSION] Web Inspector: column caption delimiters are misaligned in DataGrid https://bugs.webkit.org/show_bug.cgi?id=82193
Reviewed by Yury Semikhatsky.

Since r111742 column width in fixed layout tables is set to the width of the cell plus its left padding plus its right padding
plus half its left border plus half its right border in the collapsing border model. The layout of the panel
headers in the inspector depended on pre-r111742 behaviour, so ended up misaligned with the content below. To cater for the
new method of calculating column width enforce a fixed width for the corner column by removing padding and borders (except collapsed
borders from adjacent cells) and specify the expected width (15px) minus the expected width of the collapsed borders (1px).

* inspector/front-end/dataGrid.css:
(.data-grid th.corner):


Canonical link: https://commits.webkit.org/99839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112419 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/dataGrid.css
+++ b/Source/WebCore/inspector/front-end/dataGrid.css
@@ -49,7 +49,9 @@
 }
 
 .data-grid th.corner {
-    width: 15px;
+    width: 14px;
+    padding-right: 0px;
+    padding-left: 0px;
     border-right: 0 none transparent;
 }
 
